--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+Персональна сторінка Сєроух Варвари Олексіївни
+Я переїхала до Івано-Франківська у серпні та жила з мамою місяць. Очікувала початок навчання й переселення у гуртожиток. Мені дуже пощастило з сусідками та одногрупницями. На початку року хотіла переїхати до квартири, через відсутність гарячої води, але у гуртожитку весело, тому цю ідею я відклала.
+Автобіографія
+Сьогодення
+Друзі
+Галерея
