--- a/nowadays.html
+++ b/nowadays.html
@@ -1,1 +1,41 @@
+Сьогодення Сєроух Варвари Олексіївни
 
+Назад на головну
+
+Мій типовий список покупок:
+
+Кава
+Крупи:
+Вівсянка
+Гречка
+Рис
+Соуси:
+Кетчуп
+Майонез
+Молочні продукти:
+Сир
+Молоко
+Морозиво
+
+Мій улюблений десерт
+
+Нью-Йоркський чизкейк
+
+В блендер розкришити 400 г пісочного печива та перебити у крихту.
+Перекласти у миску і додати 150 г вершкового мала, добре перемішати.
+Підготовка до духовки:
+Роз'ємну форму для запікання, діаметром 22 см, застелити пергаментом
+Викласти печиво з маслом
+Розрівняти і сформувати бортики
+Поставити у розігріту до 180 градусів духовку на 10 хв.
+Дістати і дати охолонути, духовку не вимикати.
+Начинка:
+Вбити у миску 3 яйця, додати 150 г цукру
+Збити блендером до легкої піни
+Влити 250 мл вершків жирністю 30-33%
+Збити
+Викласти 650 г вершкового сиру філадельфія та перебити до однорідної маси.
+Зменшити температуру духовки до 160 градусів.
+Висипати вершкову масу в форму з печивом, розрівняти зверху лопаткою.
+Поставити форму у розігріту до 160 градусів духовку на 1 годину 20 хвилин.
+Дати чизкейку охолонути до кімнатної температури і поставити у холодильник на 6-8 годин.
