--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Персональна сторінка Сєроух Варвари Олексіївни</title>
   </head>
   <body>
+    <h1>Персональна сторінка Сєроух Варвари Олексіївни</h1>
     
   <p>Я переїхала до Івано-Франківська у серпні та жила з мамою місяць. Очікувала початок навчання й переселення у гуртожиток. Мені дуже пощастило з сусідками та одногрупницями. На початку року хотіла переїхати до квартири, через відсутність гарячої води, але у гуртожитку весело, тому цю ідею я відклала. </p>
 
