--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,6 @@
-
+Галерея Сєроух Варвари Олексіївни
+Назад на головну
+Мої зображення
+Зображення у цій папці
+Зображення у папці
+Зображення онлайн
