--- a/Pract1/gallery.html
+++ b/Pract1/gallery.html
@@ -1,7 +1,15 @@
-Галерея Сєроух Варвари Олексіївни
-Назад на головну
-Мої зображення
-Зображення у цій папці
-Зображення у папці
-Зображення онлайн
+<html>
+  <head>
+    <title>Галерея Сєроух Варвари Олексіївни</title>
+  </head>
+<body>
+<h1>Галерея Сєроух Варвари Олексіївни</h1>
+<p><a href="#головна">Назад на головну</a></p>
+<h2>Мої зображення</h2>
+<h3>Зображення у цій папці</h3>
+<h3>Зображення у папці</h3>
+<h3>Зображення онлайн</h3>
 https://place-hold.it/640x480/aaa/blue&text=Ser-Varvara
+  <p><a name="головна"></a></p>
+</body>
+</html>
