--- a/Pract1/gallery.html
+++ b/Pract1/gallery.html
@@ -9,7 +9,8 @@
 <h3>Зображення у цій папці</h3>
 <h3>Зображення у папці</h3>
 <h3>Зображення онлайн</h3>
-https://place-hold.it/640x480/aaa/blue&text=Ser-Varvara
+<img scr="https://place-hold.it/640x480/aaa/blue&text=Ser-Varvara"
+  alt="online image"
   <p><a name="головна"></a></p>
 </body>
 </html>
