--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -1,1 +1,25 @@
+Автобіографія Сєроух Варвари Олексіївни
 
+Назад на головну
+
+Зміст
+Базова інформація
+Мене звати Варвара. Мені 17 років. Народилась на території України, місто Харків. Подобається гуляти у лісі та збиратися на гори. У майбутньому хочу працювати в ігровій компанії.
+До змісту
+
+Дитинство
+Коли була зовсім мала дуже часто хворіла тому перші 2 роки провела у бабусі. Інші роки дитинства провела з іншою бабусею. Відвідувала музеї, цирк, театр... Пізніше почала ходити до басейну і на спортивні танці. Була дуже активною дитиною.
+До змісту
+
+Шкільні роки
+У 6 років я пішла в 1 клас. Перші 4 роки я вчилася в школі № 176, пізніше, в 5 классі, перейшла до гімназії № 45. У середніх класах почала відвідувати шкільнтй хор і малювати стінгазети для класу. З 2019 року навчатися стало складніше, через коронавірус, а з 2022 майже неможливо. Школа була цікавим періодом життя.
+До змісту
+
+Поза школою
+Поза школою відвідувала багато додаткових занять. Майже весь вільний час я була поза межами будинку. Під час навчання у 2 класі танцювала в балеті, з 3 відвідувала художню школу, з 5 пішла в музичну школу. Також ходила на заняття з математики та англійської. Через 3 місяці після початку війни пійшла волонтером у Красноградську бібліотеку, де допомагала протягом літа та навчання в 11 класі.
+До змісту
+
+Університет
+Зараз я навчаюсь на 1 курсі Прикарпатського національного університету імені Василя Стефаника. Для майбутньої професії обрала спеціальність 122 "Комп'ютерні науки"
+До змісту
+Уверх
