--- a/Pract1/friends.html
+++ b/Pract1/friends.html
@@ -1,1 +1,8 @@
-
+Друзі Сєроух Варвари Олексіївни
+Назад на головну
+Мої друзі
+Прізвище      Ім’я        Дата народження      Адреса проживання      Контактний телефон
+Тополя        Єкатерина   11.09.2005           м. Харків              +380505247155
+Максименко    Євген       10.03.2006           м. Дніпро              +380666743890
+Хоменко       Вікторія    04.11.2005           м. Дніпро              +380978840267
+Дягілєва      Анна        30.06.2005           м. Харків              +380507216579
