--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -1,6 +1,8 @@
-Автобіографія Сєроух Варвари Олексіївни
+<html>
+  <body>
+    <h1>Автобіографія Сєроух Варвари Олексіївни</h1>
 
-Назад на головну
+<p><a href="зміст">Назад на головну</a></p>
 
 Зміст
 Базова інформація
