--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -2,7 +2,7 @@
   <body>
     <h1>Автобіографія Сєроух Варвари Олексіївни</h1>
 
-<p><a href="зміст">Назад на головну</a></p>
+<p><a href="index.html">Назад на головну</a></p>
 
 Зміст
 Базова інформація
