--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -4,8 +4,8 @@
 
 <p><a href="index.html">Назад на головну</a></p>
 
-Зміст
-Базова інформація
+<h3>Зміст</h3>
+<a href="#basic information">Базова інформація</a>
 Мене звати Варвара. Мені 17 років. Народилась на території України, місто Харків. Подобається гуляти у лісі та збиратися на гори. У майбутньому хочу працювати в ігровій компанії.
 До змісту
 
