--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -5,7 +5,10 @@
 <p><a href="index.html">Назад на головну</a></p>
 
 <h3>Зміст</h3>
-<a href="#basic information">Базова інформація</a>
+<ul>
+  <li>
+    <a href="#basic-information">Базова інформація</a>
+  </li>
 Мене звати Варвара. Мені 17 років. Народилась на території України, місто Харків. Подобається гуляти у лісі та збиратися на гори. У майбутньому хочу працювати в ігровій компанії.
 До змісту
 
