--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -27,8 +27,9 @@
   </li>
   <article>
 <h2>Базова інформація</h2>
-Мене звати Варвара. Мені 17 років. Народилась на території України, місто Харків. Подобається гуляти у лісі та збиратися на гори. У майбутньому хочу працювати в ігровій компанії.
-До змісту
+<p>Мене звати Варвара. Мені 17 років. Народилась на території України, місто Харків. Подобається гуляти у лісі та збиратися на гори. У майбутньому хочу працювати в ігровій компанії.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
 
 <h2>Дитинство</h2>
 Коли була зовсім мала дуже часто хворіла тому перші 2 роки провела у бабусі. Інші роки дитинства провела з іншою бабусею. Відвідувала музеї, цирк, театр... Пізніше почала ходити до басейну і на спортивні танці. Була дуже активною дитиною.
