--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -25,25 +25,34 @@
   <li>
     <a href="#university">Університет</a>
   </li>
+
   <article>
 <h2>Базова інформація</h2>
 <p>Мене звати Варвара. Мені 17 років. Народилась на території України, місто Харків. Подобається гуляти у лісі та збиратися на гори. У майбутньому хочу працювати в ігровій компанії.</p>
   </article>
 <a href="#to-the-content">До змісту</a>
 
+  <article>
 <h2>Дитинство</h2>
-Коли була зовсім мала дуже часто хворіла тому перші 2 роки провела у бабусі. Інші роки дитинства провела з іншою бабусею. Відвідувала музеї, цирк, театр... Пізніше почала ходити до басейну і на спортивні танці. Була дуже активною дитиною.
-До змісту
+<p>Коли була зовсім мала дуже часто хворіла тому перші 2 роки провела у бабусі. Інші роки дитинства провела з іншою бабусею. Відвідувала музеї, цирк, театр... Пізніше почала ходити до басейну і на спортивні танці. Була дуже активною дитиною.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
 
+  <article>
 <h2>Шкільні роки</h2>
-У 6 років я пішла в 1 клас. Перші 4 роки я вчилася в школі № 176, пізніше, в 5 классі, перейшла до гімназії № 45. У середніх класах почала відвідувати шкільнтй хор і малювати стінгазети для класу. З 2019 року навчатися стало складніше, через коронавірус, а з 2022 майже неможливо. Школа була цікавим періодом життя.
-До змісту
+<p>У 6 років я пішла в 1 клас. Перші 4 роки я вчилася в школі № 176, пізніше, в 5 классі, перейшла до гімназії № 45. У середніх класах почала відвідувати шкільнтй хор і малювати стінгазети для класу. З 2019 року навчатися стало складніше, через коронавірус, а з 2022 майже неможливо. Школа була цікавим періодом життя.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
 
+  <article>
 <h2>Поза школою</h2>
-Поза школою відвідувала багато додаткових занять. Майже весь вільний час я була поза межами будинку. Під час навчання у 2 класі танцювала в балеті, з 3 відвідувала художню школу, з 5 пішла в музичну школу. Також ходила на заняття з математики та англійської. Через 3 місяці після початку війни пійшла волонтером у Красноградську бібліотеку, де допомагала протягом літа та навчання в 11 класі.
-До змісту
+<p>Поза школою відвідувала багато додаткових занять. Майже весь вільний час я була поза межами будинку. Під час навчання у 2 класі танцювала в балеті, з 3 відвідувала художню школу, з 5 пішла в музичну школу. Також ходила на заняття з математики та англійської. Через 3 місяці після початку війни пійшла волонтером у Красноградську бібліотеку, де допомагала протягом літа та навчання в 11 класі.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
 
+  <article>
 <h2>Університет</h2>
-Зараз я навчаюсь на 1 курсі Прикарпатського національного університету імені Василя Стефаника. Для майбутньої професії обрала спеціальність 122 "Комп'ютерні науки"
-До змісту
+<p>Зараз я навчаюсь на 1 курсі Прикарпатського національного університету імені Василя Стефаника. Для майбутньої професії обрала спеціальність 122 "Комп'ютерні науки"</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
 Уверх
