--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -25,6 +25,7 @@
   <li>
     <a href="#university">Університет</a>
   </li>
+</ul>
 
   <article>
 <h2>Базова інформація</h2>
@@ -55,4 +56,7 @@
 <p>Зараз я навчаюсь на 1 курсі Прикарпатського національного університету імені Василя Стефаника. Для майбутньої професії обрала спеціальність 122 "Комп'ютерні науки"</p>
   </article>
 <a href="#to-the-content">До змісту</a>
-Уверх
+
+  <a href="#up">Уверх</a>
+  </body>
+</html>
