--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -28,7 +28,7 @@
 </ul>
 
   <article>
-<h2>Базова інформація</h2>
+<h2 id="basic-information">Базова інформація</h2>
 <p>Мене звати Варвара. Мені 17 років. Народилась на території України, місто Харків. Подобається гуляти у лісі та збиратися на гори. У майбутньому хочу працювати в ігровій компанії.</p>
   </article>
 <a href="#to-the-content">До змісту</a>
