--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -4,7 +4,7 @@
 
 <p><a href="index.html">Назад на головну</a></p>
 
-<h3>Зміст</h3>
+<h3 id="#to-the-content">Зміст</h3>
 <ul>
   <li>
     <a href="#basic-information">Базова інформація</a>
