--- a/Pract2/nowadays.html
+++ b/Pract2/nowadays.html
@@ -1,8 +1,10 @@
-Сьогодення Сєроух Варвари Олексіївни
+<html>
+  <body>
+    <h1>Сьогодення Сєроух Варвари Олексіївни</h1>
+    
+    <p><a href="index.html">Назад на головну</a></p>
 
-Назад на головну
-
-Мій типовий список покупок:
+<h2>Мій типовий список покупок:</h2>
 
 Кава
 Крупи:
