--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -2,7 +2,9 @@
   <body>
     <h1>Автобіографія Сєроух Варвари Олексіївни</h1>
 
+<nav>
 <p><a href="index.html">Назад на головну</a></p>
+</nav>
 
 <h3 id="#to-the-content">Зміст</h3>
 <ul>
