--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -58,7 +58,8 @@
 <p>Зараз я навчаюсь на 1 курсі Прикарпатського національного університету імені Василя Стефаника. Для майбутньої професії обрала спеціальність 122 "Комп'ютерні науки"</p>
   </article>
 <a href="#to-the-content">До змісту</a>
+    
 <hr>
-  <a href="#up"><p>Уверх</p></a>
+  <p><a href="#up">Уверх</a></p>
   </body>
 </html>
