--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>Автобіографія Сєроух Варвари Олексіївни</h1>
+    <h1 id="up">Автобіографія Сєроух Варвари Олексіївни</h1>
 
 <nav>
 <p><a href="index.html">Назад на головну</a></p>
