--- a/Pract2/nowadays.html
+++ b/Pract2/nowadays.html
@@ -51,25 +51,31 @@
   </ul>
 </ul>
 
-Мій улюблений десерт
+<h2>Мій улюблений десерт</h2>
 
-Нью-Йоркський чизкейк
+<h2>Нью-Йоркський чизкейк</h2>
 
-В блендер розкришити 400 г пісочного печива та перебити у крихту.
-Перекласти у миску і додати 150 г вершкового мала, добре перемішати.
-Підготовка до духовки:
-Роз'ємну форму для запікання, діаметром 22 см, застелити пергаментом
-Викласти печиво з маслом
-Розрівняти і сформувати бортики
-Поставити у розігріту до 180 градусів духовку на 10 хв.
-Дістати і дати охолонути, духовку не вимикати.
-Начинка:
-Вбити у миску 3 яйця, додати 150 г цукру
-Збити блендером до легкої піни
-Влити 250 мл вершків жирністю 30-33%
-Збити
-Викласти 650 г вершкового сиру філадельфія та перебити до однорідної маси.
-Зменшити температуру духовки до 160 градусів.
-Висипати вершкову масу в форму з печивом, розрівняти зверху лопаткою.
-Поставити форму у розігріту до 160 градусів духовку на 1 годину 20 хвилин.
-Дати чизкейку охолонути до кімнатної температури і поставити у холодильник на 6-8 годин.
+    <ol>
+<li>В блендер розкришити 400 г пісочного печива та перебити у крихту.</li>
+<li>Перекласти у миску і додати 150 г вершкового мала, добре перемішати.</li>
+<li>Підготовка до духовки:</li>
+      <ol>
+<li>Роз'ємну форму для запікання, діаметром 22 см, застелити пергаментом</li>
+<li>Викласти печиво з маслом</li>
+<li>Розрівняти і сформувати бортики</li>
+<li>Поставити у розігріту до 180 градусів духовку на 10 хв.</li>
+      </ol>
+<li>Дістати і дати охолонути, духовку не вимикати.</li>
+<li>Начинка:</li>
+      <ol>
+<li>Вбити у миску 3 яйця, додати 150 г цукру</li>
+<li>Збити блендером до легкої піни</li>
+<li>Влити 250 мл вершків жирністю 30-33%</li>
+<li>Збити</li>
+<li>Викласти 650 г вершкового сиру філадельфія та перебити до однорідної маси.</li>
+      </ol>
+<li>Зменшити температуру духовки до 160 градусів.</li>
+<li>Висипати вершкову масу в форму з печивом, розрівняти зверху лопаткою.</li>
+<li>Поставити форму у розігріту до 160 градусів духовку на 1 годину 20 хвилин.</li>
+<li>Дати чизкейку охолонути до кімнатної температури і поставити у холодильник на 6-8 годин.</li>
+</ol>
