--- a/Pract2/friends.html
+++ b/Pract2/friends.html
@@ -1,4 +1,6 @@
-Друзі Сєроух Варвари Олексіївни
+<html>
+  <body>
+    Друзі Сєроух Варвари Олексіївни
 Назад на головну
 Мої друзі
 Прізвище      Ім’я        Дата народження      Адреса проживання      Контактний телефон
