--- a/Pract2/nowadays.html
+++ b/Pract2/nowadays.html
@@ -79,3 +79,5 @@
 <li>Поставити форму у розігріту до 160 градусів духовку на 1 годину 20 хвилин.</li>
 <li>Дати чизкейку охолонути до кімнатної температури і поставити у холодильник на 6-8 годин.</li>
 </ol>
+  </body>
+</html>
