--- a/Pract2/nowadays.html
+++ b/Pract2/nowadays.html
@@ -51,7 +51,7 @@
   </ul>
 </ul>
 
-<h2>Мій улюблений десерт</h2>
+<h2>Мій улюблений десерт:</h2>
 
 <h2>Нью-Йоркський чизкейк</h2>
 
@@ -77,7 +77,8 @@
 <li>Зменшити температуру духовки до 160 градусів.</li>
 <li>Висипати вершкову масу в форму з печивом, розрівняти зверху лопаткою.</li>
 <li>Поставити форму у розігріту до 160 градусів духовку на 1 годину 20 хвилин.</li>
-<li>Дати чизкейку охолонути до кімнатної температури і поставити у холодильник на 6-8 годин.</li>
+<li>Дати чизкейку охолонути до кімнатної температури</li>
+<li>Поставити у холодильник на 6-8 годин.</li>
 </ol>
   </body>
 </html>
