--- a/Pract2/friends.html
+++ b/Pract2/friends.html
@@ -1,8 +1,8 @@
 <html>
   <body>
-    Друзі Сєроух Варвари Олексіївни
-Назад на головну
-Мої друзі
+    <h1>Друзі Сєроух Варвари Олексіївни</h1>
+    <p><a href="index.html">Назад на головну</a></p>
+<h2>Мої друзі</h2>
 Прізвище      Ім’я        Дата народження      Адреса проживання      Контактний телефон
 Тополя        Єкатерина   11.09.2005           м. Харків              +380505247155
 Максименко    Євген       10.03.2006           м. Дніпро              +380666743890
