--- a/Pract2/friends.html
+++ b/Pract2/friends.html
@@ -3,8 +3,48 @@
     <h1>Друзі Сєроух Варвари Олексіївни</h1>
     <p><a href="index.html">Назад на головну</a></p>
 <h2>Мої друзі</h2>
-Прізвище      Ім’я        Дата народження      Адреса проживання      Контактний телефон
-Тополя        Єкатерина   11.09.2005           м. Харків              +380505247155
-Максименко    Євген       10.03.2006           м. Дніпро              +380666743890
-Хоменко       Вікторія    04.11.2005           м. Дніпро              +380978840267
-Дягілєва      Анна        30.06.2005           м. Харків              +380507216579
+<div>
+  <table>
+    <tr>
+      <th>Прізвище</th>
+      <th>Ім’я</th>
+      <th>Дата народження</th>
+      <th>Адреса проживання</th>
+      <th>Контактний телефон</th>
+    </tr>  
+
+    <tr>
+      <td>Тополя</td>
+      <td>Єкатерина</td>
+      <td>11.09.2005</td>
+      <td>м. Харків</td>
+      <td>+380505247155</td>
+    </tr>
+
+    <tr>
+      <td>Максименко</td>
+      <td>Євген</td>
+      <td>10.03.2006</td>
+      <td>м. Дніпро</td>
+      <td>+380666743890</td>
+    </tr>
+
+    <tr>
+      <td>Хоменко</td>
+      <td>Ярина</td>
+      <td>19.11.2002</td>
+      <td>м. Болехів</td>
+      <td>+380666865945</td>
+    </tr>
+
+    <tr>
+      <td>Дягілєва</td>
+      <td>Анна</td>
+      <td>30.06.2005</td>
+      <td>м. Харків</td>
+      <td>+380507216579</td>
+    </tr>
+  </table>
+</div>
+  </body>
+</html>
