--- a/Pract2/gallery.html
+++ b/Pract2/gallery.html
@@ -1,12 +1,11 @@
 <html>
-  <head>
-    <title>Галерея Сєроух Варвари Олексіївни</title>
-  </head>
 <body>
 <h1>Галерея Сєроух Варвари Олексіївни</h1>
-<p><a href="#головна">Назад на головну</a></p>
+<p><a href="index.html">Назад на головну</a></p>
 <h2>Мої зображення</h2>
 <h3>Зображення у цій папці</h3>
+  <img src="photo1.jpg"
+       alt="image in this dir">
 <h3>Зображення у папці</h3>
 <h3>Зображення онлайн</h3>
 <img scr="https://place-hold.it/640x480/aaa/blue&text=Ser-Varvara"
