--- a/Pract2/gallery.html
+++ b/Pract2/gallery.html
@@ -4,12 +4,13 @@
 <p><a href="index.html">Назад на головну</a></p>
 <h2>Мої зображення</h2>
 <h3>Зображення у цій папці</h3>
-  <img src="photo1.jpg"
+  <img src="img.gif"
        alt="image in this dir">
 <h3>Зображення у папці</h3>
+  <img src="img2.gif"
+       alt="image in dir">
 <h3>Зображення онлайн</h3>
-<img scr="https://place-hold.it/640x480/aaa/blue&text=Ser-Varvara"
-  alt="online image"
-  <p><a name="головна"></a></p>
+  <img src="https://place-hold.it/1280x1024&fontsize=26"
+       alt="online image"
 </body>
 </html>
