--- a/Pract2/gallery.html
+++ b/Pract2/gallery.html
@@ -7,7 +7,7 @@
   <img src="img.gif"
        alt="image in this dir">
 <h3>Зображення у папці</h3>
-  <img src="image/Pract2/img2.gif"
+  <img src="images/img2.gif"
        alt="image in dir">
 <h3>Зображення онлайн</h3>
   <img src="https://place-hold.it/1280x1024&fontsize=26"
