--- a/Pract3/friends.html
+++ b/Pract3/friends.html
@@ -1,1 +1,50 @@
+<html>
+  <body>
+    <h1>Друзі Сєроух Варвари Олексіївни</h1>
+    <p><a href="index.html">Назад на головну</a></p>
+<h2>Мої друзі</h2>
+<div>
+  <table>
+    <tr>
+      <th>Прізвище</th>
+      <th>Ім’я</th>
+      <th>Дата народження</th>
+      <th>Адреса проживання</th>
+      <th>Контактний телефон</th>
+    </tr>  
 
+    <tr>
+      <td>Тополя</td>
+      <td>Єкатерина</td>
+      <td>11.09.2005</td>
+      <td>м. Харків</td>
+      <td>+380505247155</td>
+    </tr>
+
+    <tr>
+      <td>Максименко</td>
+      <td>Євген</td>
+      <td>10.03.2006</td>
+      <td>м. Дніпро</td>
+      <td>+380666743890</td>
+    </tr>
+
+    <tr>
+      <td>Хоменко</td>
+      <td>Ярина</td>
+      <td>19.11.2002</td>
+      <td>м. Болехів</td>
+      <td>+380666865945</td>
+    </tr>
+
+    <tr>
+      <td>Дягілєва</td>
+      <td>Анна</td>
+      <td>30.06.2005</td>
+      <td>м. Харків</td>
+      <td>+380507216579</td>
+    </tr>
+  </table>
+</div>
+  </body>
+</html>
