--- a/Pract3/gallery.html
+++ b/Pract3/gallery.html
@@ -1,1 +1,16 @@
-
+<html>
+<body>
+<h1>Галерея Сєроух Варвари Олексіївни</h1>
+<p><a href="index.html">Назад на головну</a></p>
+<h2>Мої зображення</h2>
+<h3>Зображення у цій папці</h3>
+  <img src="img.gif"
+       alt="image in this dir">
+<h3>Зображення у папці</h3>
+  <img src="images/img2.gif"
+       alt="image in dir">
+<h3>Зображення онлайн</h3>
+  <img src="https://place-hold.it/1280x1024&fontsize=26"
+       alt="online image"
+</body>
+</html>
