--- a/Pract3/nowadays.html
+++ b/Pract3/nowadays.html
@@ -1,1 +1,84 @@
+<html>
+  <body>
+    <h1>Сьогодення Сєроух Варвари Олексіївни</h1>
+    
+    <p><a href="index.html">Назад на головну</a></p>
 
+<h2>Мій типовий список покупок:</h2>
+
+<ul>
+  <li>
+      Кава
+  </li>
+  <li>
+      Крупи:
+  </li>
+  <ul>
+  <li>
+      Вівсянка
+  </li>
+  <li>
+      Гречка
+  </li>
+  <li>
+      Рис
+  </li>
+  </ul>
+  <li>
+      Соуси:
+  </li>
+  <ul>
+  <li>
+      Кетчуп
+  </li>
+  <li>
+      Майонез
+  </li>
+  </ul>
+  <li>
+      Молочні продукти:
+  </li>
+  <ul>
+  <li>
+      Сир
+  </li>
+  <li>
+      Молоко
+  </li>
+  <li>
+      Морозиво
+  </li>
+  </ul>
+</ul>
+
+<h2>Мій улюблений десерт:</h2>
+
+<h2>Нью-Йоркський чизкейк</h2>
+
+    <ol>
+<li>В блендер розкришити 400 г пісочного печива та перебити у крихту.</li>
+<li>Перекласти у миску і додати 150 г вершкового мала, добре перемішати.</li>
+<li>Підготовка до духовки:</li>
+      <ol>
+<li>Роз'ємну форму для запікання, діаметром 22 см, застелити пергаментом</li>
+<li>Викласти печиво з маслом</li>
+<li>Розрівняти і сформувати бортики</li>
+<li>Поставити у розігріту до 180 градусів духовку на 10 хв.</li>
+      </ol>
+<li>Дістати і дати охолонути, духовку не вимикати.</li>
+<li>Начинка:</li>
+      <ol>
+<li>Вбити у миску 3 яйця, додати 150 г цукру</li>
+<li>Збити блендером до легкої піни</li>
+<li>Влити 250 мл вершків жирністю 30-33%</li>
+<li>Збити</li>
+<li>Викласти 650 г вершкового сиру філадельфія та перебити до однорідної маси.</li>
+      </ol>
+<li>Зменшити температуру духовки до 160 градусів.</li>
+<li>Висипати вершкову масу в форму з печивом, розрівняти зверху лопаткою.</li>
+<li>Поставити форму у розігріту до 160 градусів духовку на 1 годину 20 хвилин.</li>
+<li>Дати чизкейку охолонути до кімнатної температури</li>
+<li>Поставити у холодильник на 6-8 годин.</li>
+</ol>
+  </body>
+</html>
