--- a/Pract3/index.html
+++ b/Pract3/index.html
@@ -1,5 +1,15 @@
 <html>
   <body>
+    <stile>
+      #qwe:visited
+      {
+      color:#680374;
+      }
+      #qw:visited
+      {
+      color:#967247;
+      }
+    </stile>
     <h1>Персональна сторінка Сєроух Варвари Олексіївни</h1>
     
   <p>Я переїхала до Івано-Франківська у серпні та жила з мамою місяць. Очікувала початок навчання й переселення у гуртожиток. Мені дуже пощастило з сусідками та одногрупницями. На початку року хотіла переїхати до квартири, через відсутність гарячої води, але у гуртожитку весело, тому цю ідею я відклала. </p>
