--- a/Pract3/index.html
+++ b/Pract3/index.html
@@ -1,13 +1,13 @@
 <html>
   <body>
     <stile>
-      #qwe:visited
+    li
       {
-      color:#680374;
+      list-stile: none;
       }
-      #qw:visited
+      ul>:nth-child(1) a 
       {
-      color:#967247;
+      color: blue;
       }
     </stile>
     <h1>Персональна сторінка Сєроух Варвари Олексіївни</h1>
