--- a/Pract2/index.html
+++ b/Pract2/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+  <title> Pract </title>
+    <meta charset="UTF-8">
+  </head>
   <body>
     <h1>Персональна сторінка Сєроух Варвари Олексіївни</h1>
     
