--- a/Pract3/index.html
+++ b/Pract3/index.html
@@ -2,10 +2,14 @@
   <head>
   <title> Pract </title>
     <meta charset="UTF-8">
+    <style>
+      h1{front-size: 24px;}
+      li{list-stile:none;}
+      ul>:nth-child(1)
+      a{color:#468936}
+    </style>
   </head>
   <body>
-    <stile>
-    </stile>
     <h1>Персональна сторінка Сєроух Варвари Олексіївни</h1>
     
   <p>Я переїхала до Івано-Франківська у серпні та жила з мамою місяць. Очікувала початок навчання й переселення у гуртожиток. Мені дуже пощастило з сусідками та одногрупницями. На початку року хотіла переїхати до квартири, через відсутність гарячої води, але у гуртожитку весело, тому цю ідею я відклала. </p>
