--- a/Pract3/index.html
+++ b/Pract3/index.html
@@ -3,14 +3,17 @@
   <title> Pract </title>
     <meta charset="UTF-8">
     <style>
-      h1{front-size: 24px;}
+      h1{front-size: 24 px;}
       li{list-stile:none;}
       ul>:nth-child(1)
-      a{color:#468936}
+      a{color:#468936;}
+      ul>:nth-child(1)
+      a:visited{color:#475870;}
+      
     </style>
   </head>
   <body>
-    <h1>...Персональна сторінка Сєроух Варвари Олексіївни</h1>
+    <h1>Персональна сторінка Сєроух Варвари Олексіївни</h1>
     
   <p>Я переїхала до Івано-Франківська у серпні та жила з мамою місяць. Очікувала початок навчання й переселення у гуртожиток. Мені дуже пощастило з сусідками та одногрупницями. На початку року хотіла переїхати до квартири, через відсутність гарячої води, але у гуртожитку весело, тому цю ідею я відклала. </p>
 
