--- a/Pract3/index.html
+++ b/Pract3/index.html
@@ -5,11 +5,22 @@
     <style>
       h1{front-size: 24 px;}
       li{list-stile:none;}
+      
       ul>:nth-child(1)
       a{color:#468936;}
       ul>:nth-child(1)
       a:visited{color:#475870;}
       
+      ul>:nth-child(2)
+      a{color:#793739;}
+      ul>:nth-child(2)
+      a:visited{color:#132645;}
+
+       ul>:nth-child(3)
+      a{color:#939658;}
+      ul>:nth-child(3)
+      a:visited{color:#257359;}
+
     </style>
   </head>
   <body>
