--- a/Pract3/index.html
+++ b/Pract3/index.html
@@ -16,11 +16,15 @@
       ul>:nth-child(2)
       a:visited{color:#132645;}
 
-       ul>:nth-child(3)
+      ul>:nth-child(3)
       a{color:#939658;}
       ul>:nth-child(3)
       a:visited{color:#257359;}
-
+      
+      ul>:nth-child(4)
+      a{color:#027540;}
+      ul>:nth-child(4)
+      a:visited{color:#076368;}
     </style>
   </head>
   <body>
