--- a/Pract3/index.html
+++ b/Pract3/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html lang="uk">
   <head>
-  <title> Pract </title>
     <meta charset="UTF-8">
+    <title> Pract </title>
     <style>
       h1{front-size: 24 px;}
       li{list-stile:none;}
