--- a/Pract3/friends.html
+++ b/Pract3/friends.html
@@ -1,4 +1,30 @@
-<html>
+<!DOCTYPE html>
+<html lang="uk">
+
+<head>
+<meta charset="UTF-8">
+<title> Friends </title>
+<style>
+    tr:nth-child(even){
+        background-color: gray;
+    }
+    table{
+        width: 500px;
+        margin: 10px;
+        border: 4px solid black;
+    }
+    th{
+        border: solid 2px black;
+        background-color:#6db2f2;
+    }
+    td{
+        border: 2px solid black;
+        padding-left: 20px;
+    }
+    
+</style>
+</head>
+  <html>
   <body>
     <h1>Друзі Сєроух Варвари Олексіївни</h1>
     <p><a href="index.html">Назад на головну</a></p>
