--- a/Pract4/index.html
+++ b/Pract4/index.html
@@ -26,6 +26,15 @@
       a:link{color:#0ff2ae;}
       ul>:nth-child(4)
       a:visited{color:#5afaca;}
+
+      h1 {
+            text-align: center;
+            font-size: 24px;
+        }
+
+        p {
+            font-size: 120%;
+        }
     </style>
   </head>
   <body>
