--- a/Pract3/biography.html
+++ b/Pract3/biography.html
@@ -48,7 +48,7 @@
     </style>
   </head>
   <body>
-    <h1 id="up">Автобіографія Сєроух Варвари Олексіївни</h1>
+    <h1 id="bio">Автобіографія Сєроух Варвари Олексіївни</h1>
 
 <nav>
 <p><a href="index.html">Назад на головну</a></p>
@@ -108,6 +108,6 @@
 <a href="#to-the-content">До змісту</a>
     
 <hr>
-  <p><a href="#up">Уверх</a></p>
+  <p><a id="up" href="#bio">Уверх</a></p>
   </body>
 </html>
