--- a/Pract4/biography.html
+++ b/Pract4/biography.html
@@ -45,10 +45,33 @@
       background-color: rgb(84, 2, 249);
       color: rgb(255, 255, 255);
      }
+      #bio {
+    text-align: center;
+    fond-size: 22px;
+  }
+  #back {
+    fond-style: italic;
+  }
+  #page {
+      taxt-align: center;
+  }
+   .art{
+    fond-size: 120%;
+   }
+    h1{
+     fond-size: 144%;
+    }
+  #backto {
+  fond-weight: bold;
+  }
+  #up{
+    text-transform: uppercase;
+  
+      
     </style>
   </head>
   <body>
-    <h1 id="up">Автобіографія Сєроух Варвари Олексіївни</h1>
+    <h1 id="bio">Автобіографія Сєроух Варвари Олексіївни</h1>
 
 <nav>
 <p><a href="index.html">Назад на головну</a></p>
@@ -108,6 +131,6 @@
 <a href="#to-the-content">До змісту</a>
     
 <hr>
-  <p><a href="#up">Уверх</a></p>
+  <p><a id="up" href="#bio">Уверх</a></p>
   </body>
 </html>
