--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="uk">
+  <head>
+   <meta charset="UTF-8">
+   <title> Pract </title>
+  </head>
   <body>
     <h1 id="bio">Автобіографія Сєроух Варвари Олексіївни</h1>
 
