--- a/Pract2/nowadays.html
+++ b/Pract2/nowadays.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="uk">
+  <head>
+<meta charset="UTF-8">
+<title> Novadays </title>
+  </head>
 <html>
   <body>
     <h1>Сьогодення Сєроух Варвари Олексіївни</h1>
