--- a/Pract2/friends.html
+++ b/Pract2/friends.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+<title> Friends </title>
+<meta charset="UTF-8">
+</head>
   <body>
     <h1>Друзі Сєроух Варвари Олексіївни</h1>
     <p><a href="index.html">Назад на головну</a></p>
