--- a/Pract2/gallery.html
+++ b/Pract2/gallery.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+<meta charset="UTF-8">
+<title> Gallery </title>
+</head>
 <body>
 <h1>Галерея Сєроух Варвари Олексіївни</h1>
 <p><a href="index.html">Назад на головну</a></p>
