--- a/Pract3/biography.html
+++ b/Pract3/biography.html
@@ -2,7 +2,7 @@
 <html lang="uk">
   <head>
    <meta charset="UTF-8">
-   <title> Pract </title>
+   <title> Biography </title>
     <style>
       li > a {
          display: inline-block;
