--- a/Pract3/nowadays.html
+++ b/Pract3/nowadays.html
@@ -20,6 +20,7 @@ ol > li:hover:nth-child(3){
     cursor:pointer;
 }
   </style>
+</head>
   <body>
     <h1>Сьогодення Сєроух Варвари Олексіївни</h1>
     
