--- a/Pract4/friends.html
+++ b/Pract4/friends.html
@@ -21,13 +21,26 @@
         border: 2px solid black;
         padding-left: 20px;
     }
+    #main {
+  text-align: center;
+  font-size: 22px;
+}
+#back {
+  font-style: italic;
+}
+#center{
+    text-align: center;
+}
+#right{
+    text-align: right;
+}
     
 </style>
 </head>
   <html>
   <body>
-    <h1>Друзі Сєроух Варвари Олексіївни</h1>
-    <p><a href="index.html">Назад на головну</a></p>
+    <h1 id="main">Друзі Сєроух Варвари Олексіївни</h1>
+    <p><a id="back" href="index.html">Назад на головну</a></p>
 <h2>Мої друзі</h2>
 <div>
   <table>
