--- a/Pract4/gallery.html
+++ b/Pract4/gallery.html
@@ -1,15 +1,53 @@
-<html>
+<!DOCTYPE html>
+<html lang="uk">
+
+<head>
+
+<meta charset="UTF-8">
+<title> Gallery </title>
+<style>
+#main {
+  text-align: center;
+  font-size: 20px;
+}
+#back {
+  font-style: italic;
+}
+#center{
+    text-align: center;
+}
+#imginthisfold{
+    text-align:center;
+    font-size: 70%;
+}
+#imginfold{
+    text-align:center;
+    font-size: 91%;
+}
+
+
+#imgonline{
+    text-align:center;
+    font-size: 118.7%;
+}
+img{
+    display: block;
+    margin: auto;
+}
+</style>
+</head>
+
 <body>
-<h1>Галерея Сєроух Варвари Олексіївни</h1>
-<p><a href="index.html">Назад на головну</a></p>
-<h2>Мої зображення</h2>
-<h3>Зображення у цій папці</h3>
+<h1 id="main">Галерея Сєроух Варвари Олексіївни</h1>
+<p><a id="back" href="index.html">Назад на головну</a></p>
+<h2 id="center">Мої зображення</h2>
+<h3 id="imginthisfold">Зображення у цій папці</h3>
   <img src="img.gif"
        alt="image in this dir">
-<h3>Зображення у папці</h3>
+<h3 id="imginfold">Зображення у папці</h3>
   <img src="images/img2.gif"
        alt="image in dir">
-<h3>Зображення онлайн</h3>
+<h3 id="imgonline">Зображення онлайн</h3>
   <img src="https://place-hold.it/1280x1024&fontsize=26"
        alt="online image"
 </body>
