--- a/Pract5/index.html
+++ b/Pract5/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Title</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1>Main caption</h1>
+<div class="container">
+    <div class="block col-lg-4 col-md-6 ">
+        <div class="main">
+            <div class="caption caption-1">
+                Caption 1
+            </div>
 
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad adipisci aliquam cumque delectus dicta fuga fugit in nesciunt optio quaerat quasi recusandae, repellat velit, voluptatibus!
+            </p>
+        </div>
+    </div>
+
+    <div class="block col-lg-4 col-md-6 ">
+        <div class="main">
+            <div class="caption caption-2">
+                Caption 2
+            </div>
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias harum non recusandae voluptate! Dolor dolorem ex libero soluta suscipit veniam?
+            </p>
+        </div>
+    </div>
+
+    <div class="block col-lg-4 col-sm-12">
+        <div class="main">
+            <div class="caption caption-3">
+                Caption 3
+            </div>
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi cumque eius, mollitia quia repellendus reprehenderit sed soluta! Cupiditate dolorem incidunt qui.
+            </p>
+        </div>
+    </div>
+</div>
+</body>
+</html>
