--- a/Pract5/index.html
+++ b/Pract5/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Main caption</h1>
+<h1>Лисиця</h1>
 <div class="container">
     <div class="block col-lg-4 col-md-6 ">
         <div class="main">
             <div class="caption caption-1">
-                Caption 1
+                Розповсюдження
             </div>
 
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad adipisci aliquam cumque delectus dicta fuga fugit in nesciunt optio quaerat quasi recusandae, repellat velit, voluptatibus!
+                Лисиці розповсюджені в багатьох частинах світу, включаючи Північну Америку, Європу, Азію та Африку. Вони можуть пристосовуватися до різноманітних середовищ, включаючи ліси, степи, пустелі та міські області.
             </p>
         </div>
     </div>
@@ -24,11 +24,11 @@
     <div class="block col-lg-4 col-md-6 ">
         <div class="main">
             <div class="caption caption-2">
-                Caption 2
+                Зовнішній вигляд
             </div>
 
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias harum non recusandae voluptate! Dolor dolorem ex libero soluta suscipit veniam?
+                Лисиці мають характерний вигляд з довгим хвостом та густим хутром, яке часто буває червоного або сірого кольору. У них гострі вуха та великі очі.
             </p>
         </div>
     </div>
@@ -36,11 +36,11 @@
     <div class="block col-lg-4 col-sm-12">
         <div class="main">
             <div class="caption caption-3">
-                Caption 3
+                Харчування
             </div>
 
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi cumque eius, mollitia quia repellendus reprehenderit sed soluta! Cupiditate dolorem incidunt qui.
+                Лисиці є всеїдними і живляться різноманітною їжею, такою як гризуни, птахи, яйця, комахи, фрукти та навіть сміття. Вони також можуть полювати на дрібних ссавців та птахів.
             </p>
         </div>
     </div>
