--- a/Pract5/index.html
+++ b/Pract5/index.html
@@ -16,7 +16,7 @@
             </div>
 
             <p>
-                Лисиці розповсюджені в багатьох частинах світу, включаючи Північну Америку, Європу, Азію та Африку. Вони можуть пристосовуватися до різноманітних середовищ, включаючи ліси, степи, пустелі та міські області.
+                Лисиці розповсюджені в багатьох частинах світу, включаючи Північну Америку, Європу, Азію та Африку.
             </p>
         </div>
     </div>
@@ -28,7 +28,7 @@
             </div>
 
             <p>
-                Лисиці мають характерний вигляд з довгим хвостом та густим хутром, яке часто буває червоного або сірого кольору. У них гострі вуха та великі очі.
+                Лисиці мають довгий хвіст та густе хутро, яке часто буває червоного або сірого кольору. У них гострі вуха та великі очі.
             </p>
         </div>
     </div>
@@ -40,7 +40,7 @@
             </div>
 
             <p>
-                Лисиці є всеїдними і живляться різноманітною їжею, такою як гризуни, птахи, яйця, комахи, фрукти та навіть сміття. Вони також можуть полювати на дрібних ссавців та птахів.
+                Лисиці є всеїдними і живляться різноманітною їжею, такою як гризуни, птахи, яйця, комахи, фрукти та навіть сміття.
             </p>
         </div>
     </div>
