--- a/Pract5/index.html
+++ b/Pract5/index.html
@@ -24,7 +24,7 @@
     <div class="block col-lg-4 col-md-6 ">
         <div class="main">
             <div class="caption caption-2">
-                Зовнішній вигляд
+                Зовнішнність
             </div>
 
             <p>
