--- a/Pract6/biography.html
+++ b/Pract6/biography.html
@@ -3,72 +3,7 @@
   <head>
    <meta charset="UTF-8">
    <title> Pract </title>
-    <style>
-      li > a {
-         display: inline-block;
-         width: 200px;
-         text-align: center;
-         background-color: blue;
-         color:#ebfc03;
-         border: 2px solid black;
-         margin-top: 2px 0;
-      }
-
-       li > a:hover {
-        background-color: magenta;
-        color:#3903ff;
-      }
-
-      li > a:active {
-        background-color:#ebfc03;
-        color:#3903ff;
-      }
-
-      #color(1){
-      background-color:#3903ff;
-      color:#ebfc03;
-     }
-
-      #color(2){
-      background-color:#00ffbf;
-      color:#bfff00;
-     }
-      #color(3){
-      background-color:#2bff00;
-      color:#8c00ff;
-     }
-      #color(4){
-      background-color:#92f802;
-      color:#f81702;
-     }
-      #color(5){
-      background-color: rgb(84, 2, 249);
-      color: rgb(255, 255, 255);
-     }
-      #bio {
-    text-align: center;
-    fond-size: 22px;
-  }
-  #back {
-    fond-style: italic;
-  }
-  #page {
-      taxt-align: center;
-  }
-   .art{
-    fond-size: 120%;
-   }
-    h1{
-     fond-size: 144%;
-    }
-  #backto {
-  fond-weight: bold;
-  }
-  #up{
-    text-transform: uppercase;
-  
-      
-    </style>
+    <link rel="stylesheet" href="biography.css">
   </head>
   <body>
     <h1 id="bio">Автобіографія Сєроух Варвари Олексіївни</h1>
