--- a/Pract6/friends.html
+++ b/Pract6/friends.html
@@ -3,39 +3,8 @@
 
 <head>
 <meta charset="UTF-8">
+    <link rel="stylesheet" href="friends.css">
 <title> Friends </title>
-<style>
-    tr:nth-child(even){
-        background-color: gray;
-    }
-    table{
-        width: 500px;
-        margin: 10px;
-        border: 4px solid black;
-    }
-    th{
-        border: solid 2px black;
-        background-color:#6db2f2;
-    }
-    td{
-        border: 2px solid black;
-        padding-left: 20px;
-    }
-    #main {
-  text-align: center;
-  font-size: 22px;
-}
-#back {
-  font-style: italic;
-}
-#center{
-    text-align: center;
-}
-#right{
-    text-align: right;
-}
-    
-</style>
 </head>
   <html>
   <body>
