--- a/Pract6/gallery.html
+++ b/Pract6/gallery.html
@@ -4,37 +4,8 @@
 <head>
 
 <meta charset="UTF-8">
+   <link rel="stylesheet" href="gallery.css">
 <title> Gallery </title>
-<style>
-#main {
-  text-align: center;
-  font-size: 20px;
-}
-#back {
-  font-style: italic;
-}
-#center{
-    text-align: center;
-}
-#imginthisfold{
-    text-align:center;
-    font-size: 70%;
-}
-#imginfold{
-    text-align:center;
-    font-size: 91%;
-}
-
-
-#imgonline{
-    text-align:center;
-    font-size: 118.7%;
-}
-img{
-    display: block;
-    margin: auto;
-}
-</style>
 </head>
 
 <body>
