--- a/Pract6/nowadays.html
+++ b/Pract6/nowadays.html
@@ -67,6 +67,9 @@ ol > li:hover:nth-child(5){
   <li>
       Майонез
   </li>
+  <li>
+      Гірчиця
+  </li>
   </ul>
   <li>
       Молочні продукти:
