--- a/Pract0/index.html
+++ b/Pract0/index.html
@@ -67,3 +67,15 @@
     <a href="https://place-hold.it/320x240" target="_blank">Посилання на зображення</a>
 </body>
 </html>
+<div class="block1">
+  <h1 class="block1-header">Блок 1</h1>
+</div>
+<div class="block2">
+  <h1 class="block2-header">Блок 2</h1>
+</div>
+<div class="block3">
+  <h1 class="block3-header">Блок 3</h1>
+</div>
+<div class="block4">
+  <h1 class="block4-header">Блок 4</h1>
+</div>
