--- a/Pract0/index.html
+++ b/Pract0/index.html
@@ -11,13 +11,13 @@
     <h2>Сєроух Варвари Олексіївни</h2>
     <h3>Варіант 1</h3>
 
-    <div  class="block block-1">
-        <h3>Текст</h3>
+    <div  class="block1">
+        <h3 class=“block-header”>Текст</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque distinctio explicabo facere ipsum iusto, numquam quae repellendus temporibus. At laudantium odio porro sed sint temporibus?</p>
     </div>
 
-    <div class="block block-2">
-        <h3>Список</h3>
+    <div class="block2">
+        <h3 class=“block-header”>Список</h3>
         <ol>
             <li>Хліб</li>
             <li>Масло</li>
@@ -33,8 +33,8 @@
         </ol>
     </div>
 
-    <div class="block block-3">
-        <h3>Таблиця</h3>
+    <div class="block3">
+        <h3 class=“block-header”>Таблиця</h3>
         <table>
             <tr>
                 <th>Країна</th>
@@ -59,8 +59,8 @@
         </table>
     </div>
 
-    <div class="block block-4">
-        <h3>Зображення</h3>
+    <div class="block4">
+        <h3 class=“block-header”>Зображення</h3>
         <img src="320x240.gif" alt="Зображення">
     </div>
 
