--- a/KP/index.html
+++ b/KP/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Контрольна робота</h1>
-    <h2>Сєроух Варвари Олексіївни</h2>
-    <h3>Варіант 1</h3>
+    <h1 class="main-header">Контрольна робота</h1>
+    <h2 class="header">Сєроух Варвари Олексіївни</h2>
+    <h3 class="header">Варіант 1</h3>
 
     <div  class="block1">
         <h3 class=“block-header”>Текст</h3>
