--- a/KP/index.html
+++ b/KP/index.html
@@ -64,5 +64,13 @@
     </div>
 
     <a href="https://place-hold.it/320x240" target="_blank">Посилання на зображення</a>
+
+    <div class="blocks">
+  <div class="block1">Блок 1</div>
+  <div class="block2">Блок 2</div>
+  <div class="block3">Блок 3</div>
+  <div class="block4">Блок 4</div>
+</div>
+    
 </body>
 </html>
