--- a/English/index.html
+++ b/English/index.html
@@ -6,27 +6,30 @@
     <title> Pract </title>
   </head>
   <body>
-    <h1>Персональна сторінка Сєроух Варвари Олексіївни</h1>
+    <h1>Let's learn English together</h1>
     
-  <p>Я переїхала до Івано-Франківська у серпні та жила з мамою місяць. Очікувала початок навчання й переселення у гуртожиток. Мені дуже пощастило з сусідками та одногрупницями. На початку року хотіла переїхати до квартири, через відсутність гарячої води, але у гуртожитку весело, тому цю ідею я відклала. </p>
+  <p>Отже, нижче представлені заголовки сторінок, а саме: </p>
 
      <ul>
         <li>
-            <a href="biography.html">Автобіографія</a>
+            <a href="grammar.html">Grammar</a>
         </li>
 
         <li>
-            <a href="nowadays.html">Сьогодення</a>
+            <a href="reading.html">Reading</a>
         </li>
 
         <li>
-            <a href="friends.html">Друзі</a>
+            <a href="words.html">Words</a>
         </li>
 
         <li>
-            <a href="gallery.html">Галерея</a>
+            <a href="test.html">Test</a>
         </li>
     </ul>
-    
+  <p>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).
+  Reading - практикує читання.
+  Words - тут можна вивчити і записати нові слова.
+  Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</p>
 </body>
 </html>
