--- a/English/index.html
+++ b/English/index.html
@@ -28,8 +28,8 @@
         </li>
     </ul>
   <p>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</p>
-  <p>Reading - практикує читання.</p>
-  <p>Words - тут можна вивчити і записати нові слова.</p>
-  <p>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</p>
+  <a>Reading - практикує читання.</a>
+  <a>Words - тут можна вивчити і записати нові слова.</a>
+  <a>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</a>
 </body>
 </html>
