--- a/English/grammar.html
+++ b/English/grammar.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="biography.css">
   </head>
   <body>
-    <h1 id="bio">Автобіографія Сєроух Варвари Олексіївни</h1>
+    <h1 id="bio">Grammar</h1>
 
 <nav>
 <p><a href="index.html">Назад на головну</a></p>
@@ -15,23 +15,51 @@
 <h3 id="to-the-content">Зміст</h3>
 <ul>
   <li>
-    <a href="#basic-information">Базова інформація</a>
+    <a href="#Present-Simple">Present Simple</a>
   </li>
 
   <li>
-    <a href="#childhood">Дитинство</a>
+    <a href="#Present-Continuous">Present Continuous</a>
   </li>
 
   <li>
-    <a href="#school-years">Шкільні роки</a>
+    <a href="#Present-Perfect">Present Perfect</a>
   </li>
 
   <li>
-    <a href="#outside-of-school">Поза школою</a>
+    <a href="#Present-Perfect-Continuous">Present Perfect Continuous</a>
   </li>
 
   <li>
-    <a href="#university">Університет</a>
+    <a href="#Past-Simple">Past Simple</a>
+  </li>
+
+  <li>
+    <a href="#Past-Continuous">Past Continuous</a>
+  </li>
+
+  <li>
+    <a href="#Past-Perfect">Past Perfect</a>
+  </li>
+
+   <li>
+    <a href="#Past-Perfect-Continuous">Past Perfect Continuous</a>
+  </li>
+
+   <li>
+    <a href="#Future-Simple">Future Simple</a>
+  </li>
+
+   <li>
+    <a href="#Future-Continuous">Future Continuous</a>
+  </li>
+
+   <li>
+    <a href="#Future-Perfect">Future Perfect</a>
+  </li>
+
+   <li>
+    <a href="#Future-Perfect-Continuous">Future Perfect Continuous</a>
   </li>
 </ul>
 
