--- a/English/grammar.html
+++ b/English/grammar.html
@@ -64,32 +64,74 @@
 </ul>
 
   <article>
-<h2 id="basic-information">Базова інформація</h2>
-<p>Мене звати Варвара. Мені 17 років. Народилась на території України, місто Харків. Подобається гуляти у лісі та збиратися на гори. У майбутньому хочу працювати в ігровій компанії.</p>
+<h2 id="Present-Simple">Present Simple</h2>
+<p>Present Simple використовують для виразу звичайної, регулярно повторюваної дії.</p>
   </article>
 <a href="#to-the-content">До змісту</a>
 
   <article>
-<h2 id="childhood">Дитинство</h2>
-<p>Коли була зовсім мала дуже часто хворіла тому перші 2 роки провела у бабусі. Інші роки дитинства провела з іншою бабусею. Відвідувала музеї, цирк, театр... Пізніше почала ходити до басейну і на спортивні танці. Була дуже активною дитиною.</p>
+<h2 id="Present-Continuous">Present Continuous</h2>
+<p>Present Continuous використовують для виразу дії, яка відбувається на даний момент.</p>
   </article>
 <a href="#to-the-content">До змісту</a>
 
   <article>
-<h2 id="school-years">Шкільні роки</h2>
-<p>У 6 років я пішла в 1 клас. Перші 4 роки я вчилася в школі № 176, пізніше, в 5 классі, перейшла до гімназії № 45. У середніх класах почала відвідувати шкільнтй хор і малювати стінгазети для класу. З 2019 року навчатися стало складніше, через коронавірус, а з 2022 майже неможливо. Школа була цікавим періодом життя.</p>
+<h2 id="Present-Perfect">Present Perfect</h2>
+<p>Present Perfect використовують для виразу дії, яка відбулася (або яка відбувається), результат якої зв’язаний з теперішнім.</p>
   </article>
 <a href="#to-the-content">До змісту</a>
 
   <article>
-<h2 id="outside-of-school">Поза школою</h2>
-<p>Поза школою відвідувала багато додаткових занять. Майже весь вільний час я була поза межами будинку. Під час навчання у 2 класі танцювала в балеті, з 3 відвідувала художню школу, з 5 пішла в музичну школу. Також ходила на заняття з математики та англійської. Через 3 місяці після початку війни пійшла волонтером у Красноградську бібліотеку, де допомагала протягом літа та навчання в 11 класі.</p>
+<h2 id="Present-Perfect-Continuous">Present Perfect Continuous</h2>
+<p>Present Perfect Continuous використовують для виразу дії, яка розпочалася в минулому і продовжується у теперішньому часі, або ж важлива тривалість дії.</p>
   </article>
 <a href="#to-the-content">До змісту</a>
 
   <article>
-<h2 id="university">Університет</h2>
-<p>Зараз я навчаюсь на 1 курсі Прикарпатського національного університету імені Василя Стефаника. Для майбутньої професії обрала спеціальність 122 "Комп'ютерні науки"</p>
+<h2 id="Past-Simple">Past Simple</h2>
+<p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
+
+     <article>
+<h2 id="Past-Continuous">Past Continuous</h2>
+<p>Past Continuous використовують для виразу дії, яка вже відбулася в певний момент часу у минулому.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
+
+     <article>
+<h2 id="Past-Perfect">Past Perfect</h2>
+<p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
+
+     <article>
+<h2 id="Past-Perfect-Continuous">Past Perfect Continuous</h2>
+<p>Past Perfect використовують для виразу дії, яка закінчилася раніше другої дії або певного моменту у минулому.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
+
+     <article>
+<h2 id="Future-Simple">Future Simple</h2>
+<p>Future Simple використовують для виразу дії, яка відбудеться у майбутньому.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
+
+     <article>
+<h2 id="Future-Continuous">Future Continuous</h2>
+<p>Future Continuous використовують для виразу дії, яка буде відбуватися у певний момент часу в майбутньому.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
+
+     <article>
+<h2 id="Future-Perfect">Future Perfect</h2>
+<p>Future Perfect використовують для виразу дії, яка завершиться до певного моменту часу в майбутньому.</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
+
+     <article>
+<h2 id="Future-Perfect-Continuous">Future Perfect Continuous</h2>
+<p>Future Perfect Continuous використовують для виразу дії, яка розпочавшись у певний момент, все ще буде продовжуватися в якийсь момент часу у майбутньому.</p>
   </article>
 <a href="#to-the-content">До змісту</a>
     
