--- a/English/index.html
+++ b/English/index.html
@@ -27,7 +27,7 @@
             <a href="test.html">Test</a>
         </li>
     </ul>
-  <p>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</a>
+  <p><a>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</a>
   <a>Reading - практикує читання.</a>
   <a>Words - тут можна вивчити і записати нові слова.</a>
   <a>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</a></p>
