--- a/English/grammar.html
+++ b/English/grammar.html
@@ -14,6 +14,10 @@
 
 <h3 id="to-the-content">Зміст</h3>
 <ul>
+   <li>
+    <a href="#English">Англійські часи</a>
+  </li>
+  
   <li>
     <a href="#Present-Simple">Present Simple</a>
   </li>
@@ -62,6 +66,15 @@
     <a href="#Future-Perfect-Continuous">Future Perfect Continuous</a>
   </li>
 </ul>
+
+    <article>
+<h2 id="English">Англійські часи</h2>
+<p><a>Варто розуміти, що в англійській існує три кити, на яких тримається уся граматика — «to be», «to have» та «to do».</a>
+  <a>Кожен з цих китів може плавати у трьох часах: Present, Past та Future.</a>
+  <a>У свою чергу, Present, Past і Future впадають у моря Simple, Continuous, Perfect і Perfect Continuous.</a>
+</p>
+  </article>
+<a href="#to-the-content">До змісту</a>
 
   <article>
 <h2 id="Present-Simple">Present Simple</h2>
