--- a/English/grammar.html
+++ b/English/grammar.html
@@ -69,10 +69,9 @@
 
     <article>
 <h2 id="English">Англійські часи</h2>
-<p><a>Варто розуміти, що в англійській існує три кити, на яких тримається уся граматика — «to be», «to have» та «to do».</a>
-  <a>Кожен з цих китів може плавати у трьох часах: Present, Past та Future.</a>
-  <a>У свою чергу, Present, Past і Future впадають у моря Simple, Continuous, Perfect і Perfect Continuous.</a>
-</p>
+<p>Варто розуміти, що в англійській існує три кити, на яких тримається уся граматика — «to be», «to have» та «to do».</p>
+  <p>Кожен з цих китів може плавати у трьох часах: Present, Past та Future.</p>
+  <p>У свою чергу, Present, Past і Future впадають у моря Simple, Continuous, Perfect і Perfect Continuous.</p>
   </article>
 <a href="#to-the-content">До змісту</a>
 
