--- a/English/index.html
+++ b/English/index.html
@@ -27,9 +27,9 @@
             <a href="test.html">Test</a>
         </li>
     </ul>
-  <p><a>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</a></p>
-  <a>Reading - практикує читання.</a>
-  <a>Words - тут можна вивчити і записати нові слова.</a>
-  <a>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</a></p>
+  <p>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</p>
+  <p>Reading - практикує читання.</p>
+  <p>Words - тут можна вивчити і записати нові слова.</p>
+  <p>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</p>
 </body>
 </html>
