--- a/English/index.html
+++ b/English/index.html
@@ -27,9 +27,23 @@
             <a href="test.html">Test</a>
         </li>
     </ul>
-  <p>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</p>
-  <p>Reading - практикує читання.</p>
-  <p>Words - тут можна вивчити і записати нові слова.</p>
-  <p>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</p>
+
+    <ul>
+      <li>
+        Grammar - допоможе вивчити теми з граматики (Past, Present, Future).
+      </li>
+
+      <li>
+        Reading - практикує читання.
+      </li>
+
+      <li>
+        Words - тут можна вивчити і записати нові слова.
+      </li>
+
+      <li>
+        Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.
+      </li>
+    </ul>
 </body>
 </html>
