--- a/English/grammar.html
+++ b/English/grammar.html
@@ -88,7 +88,11 @@
   <article>
 <h2 id="Present-Simple">Present Simple</h2>
 <p>Present Simple використовують для виразу звичайної, регулярно повторюваної дії.</p>
-    <img src="PrSi" alt="Зображення">
+     <div class="block4">
+        <h3 class=“block-header”>Зображення</h3>
+        <img src="PrSi.gif" alt="Зображення">
+    </div>
+
   </article>
 <a href="#to-the-content">До змісту</a>
 
