--- a/English/index.html
+++ b/English/index.html
@@ -30,19 +30,19 @@
 
     <ol>
       <li>
-        Grammar - допоможе вивчити теми з граматики (Past, Present, Future).
+        <h1>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</h1>
       </li>
 
       <li>
-        Reading - практикує читання.
+        <h1>Reading - практикує читання.</h1>
       </li>
 
       <li>
-        Words - тут можна вивчити і записати нові слова.
+        <h1>Words - тут можна вивчити і записати нові слова.</h1>
       </li>
 
       <li>
-        Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.
+        <h1>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</h1>
       </li>
     </ol>
 </body>
