--- a/English/grammar.html
+++ b/English/grammar.html
@@ -88,7 +88,7 @@
   <article>
 <h2 id="Present-Simple">Present Simple</h2>
 <p>Present Simple використовують для виразу звичайної, регулярно повторюваної дії.</p>
-     <img src="PrSi.gif" alt="Зображення">
+     <img src="PrSi.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
