--- a/English/grammar.html
+++ b/English/grammar.html
@@ -89,7 +89,7 @@
 <h2 id="Present-Simple">Present Simple</h2>
 <p>Present Simple використовують для виразу звичайної, регулярно повторюваної дії.</p>
     C:\Users\Admin\Pictures\Saved Pictures\PrSi.png
-     <img src="PrSi.png" alt="Зображення">
+     <img src="C:\Users\Admin\Pictures\Saved Pictures\PrSi.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
