--- a/English/index.html
+++ b/English/index.html
@@ -28,22 +28,9 @@
         </li>
     </ul>
 
-    <ol>
-      <li>
-        <h1>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</h1>
-      </li>
-
-      <li>
-        <h1>Reading - практикує читання.</h1>
-      </li>
-
-      <li>
-        <h1>Words - тут можна вивчити і записати нові слова.</h1>
-      </li>
-
-      <li>
-        <h1>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</h1>
-      </li>
-    </ol>
+  <p>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</p>
+  <p>Reading - практикує читання.</p>
+  <p>Words - тут можна вивчити і записати нові слова.</p>
+  <p>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</p>
 </body>
 </html>
