--- a/English/grammar.html
+++ b/English/grammar.html
@@ -88,8 +88,7 @@
   <article>
 <h2 id="Present-Simple">Present Simple</h2>
 <p>Present Simple використовують для виразу звичайної, регулярно повторюваної дії.</p>
-    C:\Users\Admin\Pictures\Saved Pictures\PrSi.png
-     <img src="C:\images\PrSi.png" alt="Зображення">
+  <img src="./PrSi.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
