--- a/English/grammar.html
+++ b/English/grammar.html
@@ -88,10 +88,10 @@
   <article>
 <h2 id="Present-Simple">Present Simple</h2>
 <p>Present Simple використовують для виразу звичайної, регулярно повторюваної дії.</p>
-<img src="C:\Users\Admin\Pictures\Saved Pictures\PrSi.png" alt="Зображення" />
-<a href="#to-the-content">До змісту</a>
+<img src="PrSi.png" alt="Зображення">
 </article>
-
+<a href="#to-the-content">До змісту</a>
+    
   <article>
 <h2 id="Present-Continuous">Present Continuous</h2>
 <p>Present Continuous використовують для виразу дії, яка відбувається на даний момент.</p>
