--- a/English/grammar.html
+++ b/English/grammar.html
@@ -95,6 +95,7 @@
   <article>
 <h2 id="Present-Continuous">Present Continuous</h2>
 <p>Present Continuous використовують для виразу дії, яка відбувається на даний момент.</p>
+    <img src="PrCo.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
