--- a/English/grammar.html
+++ b/English/grammar.html
@@ -102,12 +102,14 @@
   <article>
 <h2 id="Present-Perfect">Present Perfect</h2>
 <p>Present Perfect використовують для виразу дії, яка відбулася (або яка відбувається), результат якої зв’язаний з теперішнім.</p>
+    <img src="PrPe.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
   <article>
 <h2 id="Present-Perfect-Continuous">Present Perfect Continuous</h2>
 <p>Present Perfect Continuous використовують для виразу дії, яка розпочалася в минулому і продовжується у теперішньому часі, або ж важлива тривалість дії.</p>
+    <img src="PrPeCo.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
