--- a/English/grammar.html
+++ b/English/grammar.html
@@ -116,48 +116,56 @@
   <article>
 <h2 id="Past-Simple">Past Simple</h2>
 <p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
+    <img src="PaSi.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
      <article>
 <h2 id="Past-Continuous">Past Continuous</h2>
 <p>Past Continuous використовують для виразу дії, яка вже відбулася в певний момент часу у минулому.</p>
+       <img src="PaCo.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
      <article>
 <h2 id="Past-Perfect">Past Perfect</h2>
 <p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
+       <img src="PaPe.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
      <article>
 <h2 id="Past-Perfect-Continuous">Past Perfect Continuous</h2>
 <p>Past Perfect використовують для виразу дії, яка закінчилася раніше другої дії або певного моменту у минулому.</p>
+       <img src="PaPeCo.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
      <article>
 <h2 id="Future-Simple">Future Simple</h2>
 <p>Future Simple використовують для виразу дії, яка відбудеться у майбутньому.</p>
+       <img src="FuSi.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
      <article>
 <h2 id="Future-Continuous">Future Continuous</h2>
 <p>Future Continuous використовують для виразу дії, яка буде відбуватися у певний момент часу в майбутньому.</p>
+       <img src="FuCo.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
      <article>
 <h2 id="Future-Perfect">Future Perfect</h2>
 <p>Future Perfect використовують для виразу дії, яка завершиться до певного моменту часу в майбутньому.</p>
+       <img src="FuPe.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
      <article>
 <h2 id="Future-Perfect-Continuous">Future Perfect Continuous</h2>
 <p>Future Perfect Continuous використовують для виразу дії, яка розпочавшись у певний момент, все ще буде продовжуватися в якийсь момент часу у майбутньому.</p>
+       <img src="FuPeCo.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
     
